--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -3,3 +3,9 @@
 @tailwind components;
 
 @tailwind utilities;
+
+.flex-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
